# mycaban2

./: pyproject.toml  todo.md
chat/: consumers.py  middleware.py  models.py  serializers.py  test.html  tests.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_initial.py  0002_schedule.py
config/: asgi.py  settings.py  urls.py
notifications/: consumers.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
notifications/migrations/: 0001_initial.py  0002_initial.py
properties/: admin.py  filters.py  models.py  serializers.py  urls.py  utils.py  views.py
properties/migrations/: 0001_initial.py  0002_initial.py  0003_property_formatted_address_property_latitude_and_more.py  0004_property_bathrooms_property_bedrooms_and_more.py  0005_subscriptionplan_property_boost_expiry_and_more.py  0006_auto_20250311_0048.py  0007_merge_20250311_0049.py
properties/tests/: test_geocoding.py
properties/utils/: appwrite.py  geocoding.py  paystack.py
staff/: permissions.py  serializers.py  urls.py  views.py
users/: admin.py  managers.py  models.py  permissions.py  rating.py  serializers.py  urls.py  users.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_phone_number.py  0003_rating.py  0004_user_allow_listing_updates_user_listings_private_and_more.py
